--- a/src/main/resources/group57/emrsystem/patient-admin.fxml
+++ b/src/main/resources/group57/emrsystem/patient-admin.fxml
@@ -47,15 +47,15 @@
             <Insets bottom="25.0" left="50.0" right="50.0" top="40.0" />
          </padding>
       </GridPane>
-      <TableView fx:id="displayTable">
+      <TableView fx:id="patientAdmin">
         <columns>
-          <TableColumn prefWidth="75.0" text="National ID" />
-          <TableColumn prefWidth="75.0" text="Name" />
-            <TableColumn prefWidth="75.0" text="Age" />
-            <TableColumn prefWidth="75.0" text="Gender" />
-            <TableColumn prefWidth="75.0" text="Contact Number" />
-            <TableColumn prefWidth="75.0" text="Address" />
-            <TableColumn prefWidth="75.0" text="Actions" />
+          <TableColumn fx:id="patientAdminNationalID" prefWidth="75.0" text="National ID" />
+          <TableColumn fx:id="patientAdminName" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="patientAdminAge" prefWidth="75.0" text="Age" />
+            <TableColumn fx:id="patientAdminGender" prefWidth="75.0" text="Gender" />
+            <TableColumn fx:id="patientAdminContactNo" prefWidth="75.0" text="Contact Number" />
+            <TableColumn fx:id="patientAdminAddress" prefWidth="75.0" text="Address" />
+            <TableColumn fx:id="patientAdminActions" prefWidth="75.0" text="Actions" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
