--- a/src/main/resources/group57/emrsystem/newdiagnosis.fxml
+++ b/src/main/resources/group57/emrsystem/newdiagnosis.fxml
@@ -15,6 +15,19 @@
             <Insets bottom="10.0" />
          </padding>
       </Label>
+      <VBox layoutX="25.0" layoutY="55.0">
+         <children>
+            <Label text="Patient ID" />
+            <ChoiceBox fx:id="PatientIdDropdown">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </ChoiceBox>
+         </children>
+         <padding>
+            <Insets bottom="5.0" top="5.0" />
+         </padding>
+      </VBox>
       <VBox fx:id="DiagnosiDateTextField">
          <children>
             <Label text="Date" />
@@ -27,7 +40,7 @@
             <Insets bottom="5.0" top="5.0" />
          </padding>
       </VBox>
-      <VBox fx:id="DiagnosisNameTextField" layoutX="25.0" layoutY="51.0">
+      <VBox layoutX="25.0" layoutY="51.0">
          <children>
             <Label text="Name" />
             <TextField fx:id="DiagnosisNameTextField">
@@ -39,7 +52,7 @@
             <Insets bottom="5.0" top="5.0" />
          </padding>
       </VBox>
-      <VBox fx:id="DiagnosisDiagnosedSicknessTextField" layoutX="25.0" layoutY="103.0">
+      <VBox layoutX="25.0" layoutY="103.0">
          <children>
             <Label text="Diagnosed Sickness" />
             <TextField fx:id="DiagnosisDiagnosedSicknessTextField">
