--- a/src/main/resources/group57/emrsystem/newtreatmentcourse.fxml
+++ b/src/main/resources/group57/emrsystem/newtreatmentcourse.fxml
@@ -15,6 +15,19 @@
             <Insets bottom="10.0" />
          </padding>
       </Label>
+      <VBox layoutX="25.0" layoutY="55.0">
+         <children>
+            <Label text="Patient ID" />
+            <ChoiceBox fx:id="PatientIdDropdown">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </ChoiceBox>
+         </children>
+         <padding>
+            <Insets bottom="5.0" top="5.0" />
+         </padding>
+      </VBox>
       <VBox>
          <children>
             <Label text="Treatment" />
