--- a/src/main/resources/group57/emrsystem/newpatient.fxml
+++ b/src/main/resources/group57/emrsystem/newpatient.fxml
@@ -26,7 +26,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextField>
+                        <TextField fx:id="nationalIDField">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -45,7 +45,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextField>
+                        <TextField fx:id="nameField">
                            <font>
                               <Font name="Arial" size="14.0" />
                            </font>
@@ -69,7 +69,7 @@
                                           <Font name="Arial" size="13.0" />
                                        </font>
                                     </Label>
-                                    <TextField>
+                                    <TextField fx:id="ageField">
                                        <font>
                                           <Font name="Arial" size="14.0" />
                                        </font>
@@ -86,7 +86,7 @@
                                           <Font name="Arial" size="13.0" />
                                        </font>
                                     </Label>
-                                    <TextField>
+                                    <TextField fx:id="genderField">
                                        <font>
                                           <Font size="14.0" />
                                        </font>
@@ -110,7 +110,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextField>
+                        <TextField fx:id="contactNumberField">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -130,7 +130,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextArea maxHeight="-Infinity" minHeight="-Infinity" prefHeight="134.0" prefWidth="267.0">
+                        <TextArea fx:id="addressArea" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="134.0" prefWidth="267.0">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -166,7 +166,7 @@
                   </VBox>
                   <HBox spacing="10.0">
                      <children>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #1890ff;" text="Save" textFill="WHITE" wrapText="true">
+                        <Button fx:id="saveButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #1890ff;" text="Save" textFill="WHITE" wrapText="true">
                            <padding>
                               <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
                            </padding>
