--- a/src/main/resources/group57/emrsystem/viewpatient-admin.fxml
+++ b/src/main/resources/group57/emrsystem/viewpatient-admin.fxml
@@ -26,7 +26,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextField>
+                        <TextField fx:id="nationalIDField">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -45,7 +45,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextField>
+                        <TextField fx:id="nameField">
                            <font>
                               <Font name="Arial" size="14.0" />
                            </font>
@@ -69,7 +69,7 @@
                                           <Font name="Arial" size="13.0" />
                                        </font>
                                     </Label>
-                                    <TextField>
+                                    <TextField fx:id="ageField">
                                        <font>
                                           <Font name="Arial" size="14.0" />
                                        </font>
@@ -86,7 +86,7 @@
                                           <Font name="Arial" size="13.0" />
                                        </font>
                                     </Label>
-                                    <TextField>
+                                    <TextField fx:id="genderField">
                                        <font>
                                           <Font size="14.0" />
                                        </font>
@@ -110,7 +110,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextField>
+                        <TextField fx:id="contactNumberField">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -130,7 +130,7 @@
                               <Font name="Arial" size="13.0" />
                            </font>
                         </Label>
-                        <TextArea maxHeight="-Infinity" minHeight="-Infinity" prefHeight="134.0" prefWidth="267.0">
+                        <TextArea fx:id="addressArea" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="134.0" prefWidth="267.0">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -156,7 +156,7 @@
                         </Label>
                         <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
                            <children>
-                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Medical History" textFill="#1890ff">
+                              <Button fx:id="viewMedicalHistoryButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Medical History" textFill="#1890ff">
                                  <padding>
                                     <Insets bottom="12.0" top="12.0" />
                                  </padding>
@@ -164,7 +164,7 @@
                                     <Font name="Arial" size="16.0" />
                                  </font>
                               </Button>
-                              <Button layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Treatment Course" textFill="#1890ff">
+                              <Button fx:id="viewTreatmentCourseButton" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Treatment Course" textFill="#1890ff">
                                  <padding>
                                     <Insets bottom="12.0" top="12.0" />
                                  </padding>
@@ -172,7 +172,7 @@
                                     <Font name="Arial" size="16.0" />
                                  </font>
                               </Button>
-                              <Button layoutX="10.0" layoutY="49.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Analysis Form" textFill="#1890ff">
+                              <Button fx:id="viewAnalysisFormButton" layoutX="10.0" layoutY="49.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Analysis Form" textFill="#1890ff">
                                  <padding>
                                     <Insets bottom="12.0" top="12.0" />
                                  </padding>
@@ -180,7 +180,7 @@
                                     <Font name="Arial" size="16.0" />
                                  </font>
                               </Button>
-                              <Button layoutX="10.0" layoutY="88.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Diagnosis Form" textFill="#1890ff">
+                              <Button fx:id="viewDiagnosisFormButton" layoutX="10.0" layoutY="88.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Diagnosis Form" textFill="#1890ff">
                                  <padding>
                                     <Insets bottom="12.0" top="12.0" />
                                  </padding>
@@ -188,7 +188,7 @@
                                     <Font name="Arial" size="16.0" />
                                  </font>
                               </Button>
-                              <Button layoutX="10.0" layoutY="127.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Procedure &amp; Medicine Form" textFill="#1890ff" wrapText="true">
+                              <Button fx:id="viewProcedureandMedicineFormButton" layoutX="10.0" layoutY="127.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Procedure &amp; Medicine Form" textFill="#1890ff" wrapText="true">
                                  <padding>
                                     <Insets bottom="12.0" top="12.0" />
                                  </padding>
