--- a/src/main/resources/group57/emrsystem/viewpatient-admin.fxml
+++ b/src/main/resources/group57/emrsystem/viewpatient-admin.fxml
@@ -221,7 +221,7 @@
                   </VBox>
                   <HBox spacing="10.0">
                      <children>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #1890ff;" text="Save" textFill="WHITE" wrapText="true">
+                        <Button fx:id="saveButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #1890ff;" text="Save" textFill="WHITE" wrapText="true">
                            <padding>
                               <Insets bottom="10.0" left="30.0" right="30.0" top="10.0" />
                            </padding>
