--- a/src/main/resources/group57/emrsystem/patient-admin.fxml
+++ b/src/main/resources/group57/emrsystem/patient-admin.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane>
         <columnConstraints>
@@ -44,9 +44,59 @@
             </HBox>
          </children>
          <padding>
-            <Insets bottom="25.0" left="50.0" right="50.0" top="40.0" />
+            <Insets left="50.0" right="50.0" top="40.0" />
          </padding>
       </GridPane>
+      <HBox alignment="CENTER" spacing="10.0">
+         <children>
+             <Button fx:id="viewMedicalHistoryButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Medical History" textFill="#1890ff">
+                 <padding>
+                     <Insets bottom="12.0" left="10.0" right="10.0" top="12.0" />
+                 </padding>
+                 <font>
+                     <Font name="Arial" size="16.0" />
+                 </font>
+             </Button>
+             <Button fx:id="viewTreatmentCourseButton" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Treatment Course" textFill="#1890ff">
+                 <padding>
+                     <Insets bottom="12.0" left="10.0" right="10.0" top="12.0" />
+                 </padding>
+                 <font>
+                     <Font name="Arial" size="16.0" />
+                 </font>
+             </Button>
+             <Button fx:id="viewAnalysisFormButton" layoutX="10.0" layoutY="49.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Analysis Form" textFill="#1890ff">
+                 <padding>
+                     <Insets bottom="12.0" left="10.0" right="10.0" top="12.0" />
+                 </padding>
+                 <font>
+                     <Font name="Arial" size="16.0" />
+                 </font>
+             </Button>
+             <Button fx:id="viewDiagnosisFormButton" layoutX="10.0" layoutY="88.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Diagnosis Form" textFill="#1890ff">
+                 <padding>
+                     <Insets bottom="12.0" left="10.0" right="10.0" top="12.0" />
+                 </padding>
+                 <font>
+                     <Font name="Arial" size="16.0" />
+                 </font>
+             </Button>
+             <Button fx:id="viewProcedureandMedicineFormButton" layoutX="10.0" layoutY="127.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: #1890ff;" text="View Procedure &amp; Medicine Form" textFill="#1890ff" wrapText="true">
+                 <padding>
+                     <Insets bottom="12.0" left="10.0" right="10.0" top="12.0" />
+                 </padding>
+                 <font>
+                     <Font name="Arial" size="16.0" />
+                 </font>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+             </Button>
+         </children>
+         <padding>
+            <Insets bottom="25.0" left="50.0" right="50.0" top="25.0" />
+         </padding>
+      </HBox>
       <TableView fx:id="patientTable">
         <columns>
           <TableColumn fx:id="patientNationalID" prefWidth="75.0" text="National ID" />
